# QuadraticAssignment

./: CMakeLists.txt  README.md  main.c  utils.c  utils.h
Algorithm/: algorithms.h  heuristics.c  hybridBranchAndBound.c  parallelBranchAndBound.c  simpleBranchAndBound.c
DataStructure/: DataStructure.h  LinkedQueue.c  LinkedQueue.h  LinkedStack.c  LinkedStack.h  ParallelStack.c  ParallelStack.h
IO/: IO.c  IO.h
MPI/: mpiWrapper.c  mpiWrapper.h
qa_data/: generate_test_data.py  qa_10.out  qa_12.out  qa_15.out  qa_4.test
